--- a/html/signup.html
+++ b/html/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Basic form</title>
+  <title>SignUp</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -20,7 +20,7 @@
         </button>
         <span><img class="img-fluid navbar-brand" src="C:\Users\HP\php classes\e-commerce\images\Logo.png" /> </span>
         <a href="#" class="navbar-brand"><h3 style="display: inline;">iMfo Mall Mangement System</h3></a>
-      
+
     </div>
       <div class="collapse navbar-collapse" >
         <ul class="nav navbar-nav navbar-right">
