--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>LifeStyle Stores</title>
+		<title>iMfo Mall Management System Store</title>
 		<!-- link to Bootstrap minified css-->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<!-- link to Jquery minified-->
@@ -13,7 +13,7 @@
         <script src="C:\Users\HP\php classes\e-commerce\js\index.js"></script>
     </head>
     <body>
-   
+
         <nav class="nav navbar-fixed-top" style="background-color:#f7e5f0;">
 			<div class="container">
 				<div class="navbar-header">
@@ -24,7 +24,7 @@
 					</button>
 					<span><img class="img-fluid navbar-brand" src="C:\Users\HP\php classes\e-commerce\images\Logo.png" /> </span>
 					<a href="#" class="navbar-brand"><h3 style="display: inline;">iMfo Mall Mangement System</h3></a>
-				
+
 			</div>
 				<div class="collapse navbar-collapse" >
 					<ul class="nav navbar-nav navbar-right">
@@ -71,7 +71,7 @@
 				<div class="col-sm-6"><img src="C:\Users\HP\php classes\e-commerce\images\7.jpg" class="thumbnail"/></div>
 			</div>
 		</div>
-		
+
         <footer>
 			<div class="container">
 				Copyright <span class="glyphicon glyphicon-copyright-mark"></span> LifeStyle Stores.
