--- a/html/success.html
+++ b/html/success.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-		<title>LifeStyle Stores</title>
+		<title>iMfo Mall Management System</title>
 		<!-- link to Bootstrap minified css-->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<!-- link to Jquery minified-->
@@ -13,12 +13,12 @@
         <script src="C:\Users\HP\php classes\e-commerce\js\index.js"></script>
     </head>
     <body>
-    
+
         <div class="container panel-margin">
             <div class="jumbotron" style="color:navy; background-color: peachpuff; text-align: center;">
                 <p>Thank you for shopping with us. <a href="products.html">Click here</a> to purchase any other item.</p>
             </div>
         </div>
-   
+
     </body>
     </html>
