--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<!-- link to Bootstrap JS -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 		<!-- link to external CSS -->
-        <link href="C:\Users\HP\php classes\e-commerce\css\style.css" rel="stylesheet" type="text/css"/>
+        <link href="vanshita-vekta.github.io/css/style.css" rel="stylesheet" type="text/css"/>
         <script src="C:\Users\HP\php classes\e-commerce\js\index.js"></script>
     </head>
     <body>
