--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 		<!-- link to external CSS -->
         <link href="style.css" rel="stylesheet" type="text/css"/>
-        <script src="C:\Users\HP\php classes\e-commerce\js\index.js"></script>
+        <script src="index.js"></script>
     </head>
     <body>
 
